--- a/f2.html
+++ b/f2.html
@@ -15,22 +15,29 @@
     // We'll fetch data from your published Google Sheet.
     // This link pulls the entire sheet as an array of objects.
     // If you'd like to parse strictly by row index, we can switch to an array-of-arrays approach.
-    const sheetUrl = "https://opensheet.vercel.app/2PACX-1vQSM-lJx6SGgWefGw9s51MEALdSlpwnaUF9QrvvCiDLWTAH5YZKldb9_dFlgZ9yVmKk0yYKkY2QmBMS/ONSITE%20-%20CAFETERIA%20(A)";
-
-    // We suspect the user encountered 'Error fetching sheet:' which might indicate
-    // the doc isn't published, or the link is invalid. We'll add checks for res.ok
-    // and provide test cases.
+    //
+    // Currently, it references a 2PACX link, which typically won't work with opensheet.vercel.app
+    // unless it's recognized as a standard doc ID. We suspect that's causing the 400 error.
 
     // TEST CASES:
-    // 1) If the sheet is accessible: We expect the code to load, find 'Tan' if it exists, and display results.
-    // 2) If the sheet URL is invalid or not published: We expect an error message to appear in the console and fallback on-screen.
+    // 1) If the sheet is accessible with a valid ID: The code loads, finds 'Tan' if it exists, and displays results.
+    // 2) If the sheet URL is invalid or not published: We expect an error message in the console and a fallback message on-screen.
     // 3) If the sheet is empty: We expect no cards to display, but no crash.
+    // 4) If the doc link is actually a 2PACX link (like a Google Docs link or share link) and not a GSheet ID:
+    //    We expect a 400 (Bad Request) from opensheet.vercel.app, which is what's happening now.
+
+    // PLEASE CONFIRM:
+    // - Is '2PACX-1vQSM-lJx6...' truly your sheet's ID?
+    // - If not, what is the correct doc ID from your actual Google Sheet URL?
+
+    const sheetUrl = "https://opensheet.vercel.app/1BsGqMhxwTGWzycOJmiKgmkDRN2Sb6QOyODCpjiVUDVo/ONSITE%20-%20CAFETERIA%20(A)";
 
     async function fetchTanData() {
       try {
         const res = await fetch(sheetUrl);
         if (!res.ok) {
-          // The sheet might be missing or not publicly published.
+          // The sheet might be missing or not publicly published,
+          // or the doc ID is invalid for opensheet.
           throw new Error(`Failed to load sheet. HTTP status ${res.status}`);
         }
 
@@ -46,7 +53,8 @@
 
         const cardsDiv = document.getElementById('cards');
 
-        // Ask the user: "What is the expected behavior if multiple rows have 'Tan'?" For now, we'll display them all.
+        // Ask the user: "What is the expected behavior if multiple rows have 'Tan'?" 
+        // For now, we'll display them all.
 
         rows.forEach((rowObj) => {
           let foundTan = false;
@@ -80,7 +88,9 @@
         const cardsDiv = document.getElementById('cards');
         const errorEl = document.createElement('div');
         errorEl.className = "bg-red-100 text-red-700 p-4 rounded";
-        errorEl.textContent = "Failed to load data. Please check if the sheet is published and the URL is correct.";
+        errorEl.textContent = 
+          "Failed to load data. Please check if the sheet is published, " + 
+          "the sheet ID is correct, and that opensheet.vercel.app can access it.";
         cardsDiv.appendChild(errorEl);
       }
     }
