--- a/f2.html
+++ b/f2.html
@@ -76,7 +76,7 @@
         for (let col = 0; col < row.length; col++) {
           const cellValue = row[col] || "";
           // Check for partial match "Tan"
-          if (cellValue.includes("Tan")) {
+          if (cellValue.includes("Yvette")) {
             rowFoundAny = true;
 
             // Grab up to 3 cells to the left
